[gd_scene load_steps=11 format=2]

[ext_resource path="res://World Map/Main.gd" type="Script" id=1]
[ext_resource path="res://Components/BackToMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://World Map/Point.tscn" type="PackedScene" id=3]
[ext_resource path="res://World Map/Path.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 170, -190, 0, 0, 0, 0, 480, -80 )
}

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 210, -110, 0, 0, 0, 0, 280, 30, 0, 0, 0, 0, 480, -80 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 180, 0, 0, 0, 0, 290, 140 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, -220 )
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -480, 80 )
}

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Back to Start" parent="." index="0" instance=ExtResource( 2 )]

[node name="Points" type="Node2D" parent="." index="1"]

[node name="Point1" parent="Points" index="0" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 200, 260 )
_sections_unfolded = [ "Transform" ]

[node name="Up" type="Path2D" parent="Points/Point1" index="1"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
script = ExtResource( 4 )
direction = 1
speed = 2

[node name="Follow" type="PathFollow2D" parent="Points/Point1/Up" index="0"]

rotation = -0.840897
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Tween" type="Tween" parent="Points/Point1/Up" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Right" type="Path2D" parent="Points/Point1" index="2"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 6 )
script = ExtResource( 4 )
direction = 3
speed = 2

[node name="Follow" type="PathFollow2D" parent="Points/Point1/Right" index="0"]

rotation = 0.0767719
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Tween" type="Tween" parent="Points/Point1/Right" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Down" type="Path2D" parent="Points/Point1" index="3"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 3 )
script = ExtResource( 4 )
direction = 4
speed = 2

[node name="Follow" type="PathFollow2D" parent="Points/Point1/Down" index="0"]

rotation = 1.24905
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Tween" type="Tween" parent="Points/Point1/Down" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Point2" parent="Points" index="1" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 490, 400 )

[node name="Up" type="Path2D" parent="Points/Point2" index="1"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 4 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
direction = 1
speed = 2

[node name="Follow" type="PathFollow2D" parent="Points/Point2/Up" index="0"]

rotation = -0.840897
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Tween" type="Tween" parent="Points/Point2/Up" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Point3" parent="Points" index="2" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 680, 180 )

[node name="Left" type="Path2D" parent="Points/Point3" index="1"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 5 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
direction = 2
speed = 2

[node name="Follow" type="PathFollow2D" parent="Points/Point3/Left" index="0"]

rotation = 0.0767719
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Tween" type="Tween" parent="Points/Point3/Left" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Charakter" type="Sprite" parent="." index="2"]

position = Vector2( 200, 260 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[connection signal="tween_completed" from="Points/Point1/Up/Tween" to="." method="stop_move"]

[connection signal="tween_completed" from="Points/Point1/Right/Tween" to="." method="stop_move"]

[connection signal="tween_completed" from="Points/Point1/Down/Tween" to="." method="stop_move"]

[connection signal="tween_completed" from="Points/Point2/Up/Tween" to="." method="stop_move"]

[connection signal="tween_completed" from="Points/Point3/Left/Tween" to="." method="stop_move"]


